# mimir

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  mimir.yaml  openapi.json
.cursor/rules/: api-backend.mdc  data-ullr.mdc  no-cursor-advertising.mdc  project-overview.mdc  uv-required.mdc  web-frontend.mdc
api/: pyproject.toml
api/src/mimir_api/: __init__.py  app.py  config.py  db.py  dependencies.py  ingestion.py  openapi.py  sse.py  watcher.py
api/src/mimir_api/routes/: activity.py  agents.py  projects.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  index.css
web/src/components/board/: KanbanColumn.tsx  ProjectBadge.tsx  TaskCard.tsx
web/src/components/layout/: AppSidebar.tsx  DashboardLayout.tsx  Header.tsx
web/src/hooks/: use-api.ts
web/src/lib/: api.ts  colors.ts  types.ts
web/src/pages/: Activity.tsx  Agents.tsx  Index.tsx
